Restructure publications page

--- a/_includes/publications.bib
+++ b/_includes/publications.bib
@@ -12,7 +12,7 @@
   pages =	 {7:1--7:10},
   articleno =	 7,
   numpages =	 10,
-  pdf =		 {http://www-users.york.ac.uk/publications/files/BCWF2015},
+  url =		 {files/BCWF2015.pdf},
   doi =		 {10.1145/2822304.2822307},
   acmid =	 2822307,
   publisher =	 {ACM},
@@ -34,5 +34,5 @@
   pages =	 "63--78",
   isbn =	 "978-3-319-33693-0",
   doi =		 "10.1007/978-3-319-33693-0_5",
-  url =		 {http://www-users.york.ac.uk/publications/files/FBCW2016}
+  url =		 {files/FBCW2016.pdf}
 }
