Update publications list

--- a/_includes/publications.bib
+++ b/_includes/publications.bib
@@ -12,7 +12,6 @@
   pages =		 {7:1--7:10},
   articleno =	 7,
   numpages =	 10,
-  url =			 {files/BCWF2015.pdf},
   doi =			 {10.1145/2822304.2822307},
   acmid =		 2822307,
   publisher =	 {ACM},
@@ -33,8 +32,7 @@
   address =		 "Cham",
   pages =		 "63--78",
   isbn =		 "978-3-319-33693-0",
-  doi =			 "10.1007/978-3-319-33693-0_5",
-  url =			 {files/FBCW2016.pdf}
+  doi =			 "10.1007/978-3-319-33693-0_5"
 }
 
 @InProceedings{Baxter2017,
@@ -86,4 +84,70 @@
   address =		 "Cham",
   pages =		 "21--38",
   isbn =		 "978-3-030-31157-5"
+}
+
+@InProceedings{foster2020automated,
+  author =		 {Foster, Simon and Baxter, James},
+  title =		 {Automated Algebraic Reasoning for Collections and
+                  Local Variables with Lenses},
+  year =		 2020,
+  booktitle =	 {Relational and Algebraic Methods in Computer
+                  Science},
+  pubstate =	 {inpress},
+}
+
+@article{foster2020unifying,
+  author =		 {Foster, Simon and Baxter, James and Cavalcanti, Ana and
+                  Woodcock, Jim and Zeyda, Frank},
+  title =		 {Unifying semantic foundations for automated
+                  verification tools in Isabelle/UTP},
+  journal =		 {Sci. Comput. Program.},
+  volume =		 197,
+  pages =		 102510,
+  year =		 2020,
+  url =			 {https://arxiv.org/abs/1905.05500},
+  doi =			 {10.1016/j.scico.2020.102510},
+  timestamp =	 {Tue, 29 Dec 2020 18:17:44 +0100}
+}
+
+@article{baxter2021sound,
+  month =		 apr,
+  title =		 {Sound reasoning in tock-{CSP}},
+  author =		 {Baxter, James and Ribeiro, Pedro and Cavalcanti, Ana},
+  year =		 2021,
+  journal =		 {Acta Informatica},
+  url =			 {https://eprints.whiterose.ac.uk/174356/},
+  doi =			 {10.1007/s00236-020-00394-3}
+}
+
+@inproceedings{cavalcanti2021roboworld,
+  author =		 {Cavalcanti, Ana and Baxter, James and Carvalho, Gustavo},
+  editor =		 {R.~Calinescu and C.~S.~Pasareanu},
+  title =		 {{RoboWorld}: Where Can My Robot Work?},
+  booktitle =	 {Software Engineering and Formal Methods - 19th
+                  International Conference, {SEFM} 2021, Virtual
+                  Event, December 6-10, 2021, Proceedings},
+  series =		 {Lecture Notes in Computer Science},
+  volume =		 13085,
+  pages =		 {3--22},
+  publisher =	 {Springer},
+  year =		 2021,
+  doi =			 {10.1007/978-3-030-92124-8\_1}
+}
+
+@inbook{cavalcanti2021robostar,
+  author =		 {Cavalcanti, Ana and Barnett, Will and Baxter, James
+                  and Carvalho, Gustavo and Miyazawa, Alvaro and
+                  Ribeiro, Pedro and Sampaio, Augusto},
+  editor =		 {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
+                  J.~Timmis and J.~C.~P.~Woodcock},
+  title =		 {RoboStar Technology: A Roboticist's Toolbox for
+                  Combined Proof, Simulation, and Testing},
+  booktitle =	 {Software Engineering for Robotics},
+  year =		 2021,
+  publisher =	 {Springer International Publishing},
+  pages =		 {249--293},
+  doi =			 {10.1007/978-3-030-66494-7_9},
+  url =
+                  {https://www-users.cs.york.ac.uk/%7Ealcc/publications/papers/CBBCFMRS21.pdf}
 }
