Update discussion of current research and publications list

--- a/_includes/publications.bib
+++ b/_includes/publications.bib
@@ -1,4 +1,4 @@
-@inproceedings{BCWF2015,
+@inproceedings{baxter2015safety,
   author =		 {Baxter, James and Cavalcanti, Ana and Wellings, Andy
                   and Freitas, Leo},
   title =		 {Safety-Critical Java Virtual Machine Services},
@@ -18,24 +18,7 @@
   address =		 {New York, NY, USA},
 }
 
-@Inbook{FBCW2016,
-  author =		 "Freitas, Leo and Baxter, James and Cavalcanti, Ana
-                  and Wellings, Andy",
-  editor =		 "{\'A}brah{\'a}m, Erika and Huisman, Marieke",
-  title =		 "Modelling and Verifying a Priority Scheduler for an
-                  SCJ Runtime Environment",
-  bookTitle =	 "Integrated Formal Methods: 12th International
-                  Conference, IFM 2016, Reykjavik, Iceland, June 1-5,
-                  2016, Proceedings",
-  year =		 2016,
-  publisher =	 "Springer International Publishing",
-  address =		 "Cham",
-  pages =		 "63--78",
-  isbn =		 "978-3-319-33693-0",
-  doi =			 "10.1007/978-3-319-33693-0_5"
-}
-
-@InProceedings{Baxter2017,
+@InProceedings{baxter2017algebraic,
   author =		 {Baxter, James and Cavalcanti, Ana},
   title =		 {{Algebraic Compilation of Safety-Critical Java
                   Bytecode}},
@@ -50,7 +33,7 @@
   doi =			 {10.1007/978-3-319-66845-1_11},
 }
 
-@PhdThesis{Baxter2018,
+@PhdThesis{baxter2018ahead,
   author =		 {Baxter, James},
   title =		 {{Ahead-of-time Algebraic Compliation for
                   Safety-Critical Java}},
@@ -59,7 +42,74 @@
   url =			 {http://etheses.whiterose.ac.uk/22698/}
 }
 
-@InProceedings{FBCAW2018,
+@article{baxter2022sound,
+  title={Sound reasoning in tock-CSP},
+  author={Baxter, James and Ribeiro, Pedro and Cavalcanti, Ana},
+  journal={Acta Informatica},
+  volume={59},
+  number={1},
+  pages={125--162},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{baxter2023testing,
+  title={Testing using CSP models: time, inputs, and outputs},
+  author={Baxter, James and Cavalcanti, Ana and Gazda, Maciej and Hierons, Robert M},
+  journal={ACM Transactions on Computational Logic},
+  volume=24,
+  number=2,
+  pages={1--40},
+  year=2023,
+  publisher={ACM New York, NY}
+}
+
+@InProceedings{cavalcanti2019testing,
+  author =		 "Cavalcanti, Ana and Baxter, James and Hierons,
+                  Robert M. and Lefticaru, Raluca",
+  editor =		 "Beyer, Dirk and Keller, Chantal",
+  title =		 "Testing Robots Using CSP",
+  booktitle =	 "Tests and Proofs",
+  year =		 2019,
+  publisher =	 "Springer International Publishing",
+  address =		 "Cham",
+  pages =		 "21--38",
+  isbn =		 "978-3-030-31157-5"
+}
+
+@inbook{cavalcanti2021robostar,
+  author =		 {Cavalcanti, Ana and Barnett, Will and Baxter, James
+                  and Carvalho, Gustavo and Miyazawa, Alvaro and
+                  Ribeiro, Pedro and Sampaio, Augusto},
+  editor =		 {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
+                  J.~Timmis and J.~C.~P.~Woodcock},
+  title =		 {RoboStar Technology: A Roboticist's Toolbox for
+                  Combined Proof, Simulation, and Testing},
+  booktitle =	 {Software Engineering for Robotics},
+  year =		 2021,
+  publisher =	 {Springer International Publishing},
+  pages =		 {249--293},
+  doi =			 {10.1007/978-3-030-66494-7_9},
+  url =
+                  {https://www-users.cs.york.ac.uk/%7Ealcc/publications/papers/CBBCFMRS21.pdf}
+}
+
+@inproceedings{cavalcanti2021roboworld,
+  author =		 {Cavalcanti, Ana and Baxter, James and Carvalho, Gustavo},
+  editor =		 {R.~Calinescu and C.~S.~Pasareanu},
+  title =		 {{RoboWorld}: Where Can My Robot Work?},
+  booktitle =	 {Software Engineering and Formal Methods - 19th
+                  International Conference, {SEFM} 2021, Virtual
+                  Event, December 6-10, 2021, Proceedings},
+  series =		 {Lecture Notes in Computer Science},
+  volume =		 13085,
+  pages =		 {3--22},
+  publisher =	 {Springer},
+  year =		 2021,
+  doi =			 {10.1007/978-3-030-92124-8\_1}
+}
+
+@InProceedings{foster2018automating,
   author =		 "Foster, Simon and Baxter, James and Cavalcanti, Ana
                   and Miyazawa, Alvaro and Woodcock, Jim",
   editor =		 "Bae, Kyungmin and {\"O}lveczky, Peter Csaba",
@@ -73,18 +123,6 @@
   isbn =		 "978-3-030-02146-7"
 }
 
-@InProceedings{CBHL2019,
-  author =		 "Cavalcanti, Ana and Baxter, James and Hierons,
-                  Robert M. and Lefticaru, Raluca",
-  editor =		 "Beyer, Dirk and Keller, Chantal",
-  title =		 "Testing Robots Using CSP",
-  booktitle =	 "Tests and Proofs",
-  year =		 2019,
-  publisher =	 "Springer International Publishing",
-  address =		 "Cham",
-  pages =		 "21--38",
-  isbn =		 "978-3-030-31157-5"
-}
 
 @InProceedings{foster2020automated,
   author =		 {Foster, Simon and Baxter, James},
@@ -110,44 +148,19 @@
   timestamp =	 {Tue, 29 Dec 2020 18:17:44 +0100}
 }
 
-@article{baxter2021sound,
-  month =		 apr,
-  title =		 {Sound reasoning in tock-{CSP}},
-  author =		 {Baxter, James and Ribeiro, Pedro and Cavalcanti, Ana},
-  year =		 2021,
-  journal =		 {Acta Informatica},
-  url =			 {https://eprints.whiterose.ac.uk/174356/},
-  doi =			 {10.1007/s00236-020-00394-3}
-}
-
-@inproceedings{cavalcanti2021roboworld,
-  author =		 {Cavalcanti, Ana and Baxter, James and Carvalho, Gustavo},
-  editor =		 {R.~Calinescu and C.~S.~Pasareanu},
-  title =		 {{RoboWorld}: Where Can My Robot Work?},
-  booktitle =	 {Software Engineering and Formal Methods - 19th
-                  International Conference, {SEFM} 2021, Virtual
-                  Event, December 6-10, 2021, Proceedings},
-  series =		 {Lecture Notes in Computer Science},
-  volume =		 13085,
-  pages =		 {3--22},
-  publisher =	 {Springer},
-  year =		 2021,
-  doi =			 {10.1007/978-3-030-92124-8\_1}
-}
-
-@inbook{cavalcanti2021robostar,
-  author =		 {Cavalcanti, Ana and Barnett, Will and Baxter, James
-                  and Carvalho, Gustavo and Miyazawa, Alvaro and
-                  Ribeiro, Pedro and Sampaio, Augusto},
-  editor =		 {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
-                  J.~Timmis and J.~C.~P.~Woodcock},
-  title =		 {RoboStar Technology: A Roboticist's Toolbox for
-                  Combined Proof, Simulation, and Testing},
-  booktitle =	 {Software Engineering for Robotics},
-  year =		 2021,
-  publisher =	 {Springer International Publishing},
-  pages =		 {249--293},
-  doi =			 {10.1007/978-3-030-66494-7_9},
-  url =
-                  {https://www-users.cs.york.ac.uk/%7Ealcc/publications/papers/CBBCFMRS21.pdf}
+@Inbook{freitas2016modelling,
+  author =		 "Freitas, Leo and Baxter, James and Cavalcanti, Ana
+                  and Wellings, Andy",
+  editor =		 "{\'A}brah{\'a}m, Erika and Huisman, Marieke",
+  title =		 "Modelling and Verifying a Priority Scheduler for an
+                  SCJ Runtime Environment",
+  bookTitle =	 "Integrated Formal Methods: 12th International
+                  Conference, IFM 2016, Reykjavik, Iceland, June 1-5,
+                  2016, Proceedings",
+  year =		 2016,
+  publisher =	 "Springer International Publishing",
+  address =		 "Cham",
+  pages =		 "63--78",
+  isbn =		 "978-3-319-33693-0",
+  doi =			 "10.1007/978-3-319-33693-0_5"
 }
